--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,19 @@
 body {
-  height: 100vh;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  /* margin: 0px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  bottom: 0; */
+  height: calc(100vh + 100px);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -18,13 +22,13 @@ code {
   flex-direction: column;
   /* justify-content: center; */
   /* align-items: center; */
-  height: 90%;
+  /* height: 90%; */
   margin-bottom: 0rem;
   padding-bottom: 0.3rem;
 }
 
 #root {
-  margin-bottom: 0rem;
+  /* margin-bottom: 0rem; */
   padding-bottom: 0;
-  height: 100%;
+  /* height: 100%; */
 }
